fixed a bug whereas the blog sidebar was not showing up on empty search results page, an apparent issue with wp is_search() function

--- a/style.css
+++ b/style.css
@@ -298,6 +298,10 @@ a img.aligncenter {
   margin-top: 3em;
 }
 
+.archive-header{
+    margin-top: 3em;
+}
+
 #searchform {}
 .widget_search {}
 .screen-reader-text {}
